fix: hide too long content in postItems (#167)
* fix(MediaPreview): key duplicated

* fix(notification): fetch request approval until community addr loaded

* test different size

* wip: fix update loop

* wip: fix the delimiters on post content

* wip: hide too long content and display expand button

* wip: slice notification msg list

--- a/src/components/PostItems/PostContent/index.module.scss
+++ b/src/components/PostItems/PostContent/index.module.scss
@@ -41,3 +41,20 @@
 .contentText {
   white-space: pre-line;
 }
+
+.expandContent{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: var(--basePadding3) 0px;
+
+  svg{
+    height: 18px;
+    width: 18px;
+    fill: var(--primary-06);
+  }
+  button{
+    margin-left: 2px;
+    padding-left: 2px;
+  }
+}
